업로드 _01 배열저장 및 li목록으로 출력형식 변경

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -22,7 +22,12 @@
     
     <section>
       <h2>글 목록</h2>
-      <%= posts  %> 
+      <ul>
+        <% for(let i =0; i < posts.length; i++){ %>
+          <li><%= posts[i]  %></li>
+        <% } %> 
+        
+      </ul>
     </section>
   </div><!-- container -->
   
