--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -23,13 +23,16 @@
     <section>
       <h2>글 목록</h2>
       <ul>
-        <% for(let i =0; i < posts.length; i++){ %>
-          <li><%= posts[i]  %></li>
+        <% for(let i = posts.length-1; i >=0 ; i--){ %> 
+          <li>
+            글번호 <%= i+1 %>: <%= posts[i]  %>
+            <form action="/delete/<%= i %>" method="post">
+            <button type="submit">삭제</button>
+          </form>
+          </li>
         <% } %> 
-        
       </ul>
     </section>
   </div><!-- container -->
-  
 </body>
 </html>
